--- a/res/layout/insert_image_gridview.xml
+++ b/res/layout/insert_image_gridview.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-    
+    android:layout_height="wrap_content" >
+
     <ViewFlipper
         android:id="@+id/vfImages"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" 
-        android:animateLayoutChanges="true">
+        android:layout_height="match_parent"
+        android:animateLayoutChanges="true" >
+
         <GridView
             android:id="@+id/insert_cat_gridview"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="188dp"
             android:columnWidth="100dp"
             android:gravity="center"
             android:numColumns="auto_fit"
             android:stretchMode="columnWidth" >
         </GridView>
+
         <GridView
             android:id="@+id/insert_image_gridview"
             android:layout_width="fill_parent"
@@ -27,4 +29,20 @@
             android:stretchMode="columnWidth" >
         </GridView>
     </ViewFlipper>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <ImageButton
+            android:id="@+id/add_image"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="@color/lightblueback"
+            android:contentDescription="@string/calc_open"
+            android:scaleType="fitCenter"
+            android:src="@drawable/sign_add" />
+    </RelativeLayout>
+
 </FrameLayout>
