--- a/res/layout-sw480dp/activity_talker_main.xml
+++ b/res/layout-sw480dp/activity_talker_main.xml
@@ -20,7 +20,8 @@
         android:id="@+id/new_conversation_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/manner_of_use_button"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:drawableTop="@drawable/app_icon"
         android:gravity="center"
         android:text="@string/new_conversation" />
