--- a/res/layout/canvas_default.xml
+++ b/res/layout/canvas_default.xml
@@ -59,7 +59,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:contentDescription="@null"
-        android:scaleType="fitXY"
+        android:scaleType="fitCenter"
+		android:adjustViewBounds="true"  
         android:src="@drawable/sign_add" />
 
     <ImageButton
@@ -135,7 +136,9 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:contentDescription="@null"
-        android:scaleType="fitXY"
+        android:scaleType="fitCenter"
+		android:adjustViewBounds="true"
         android:src="@drawable/action_settings" />
+
 
 </RelativeLayout>
