--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -1,76 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
-    
-    <PreferenceCategory 
-        android:title="@string/settings_pencil">
+
+    <PreferenceCategory android:title="@string/settings_pencil" >
         <ListPreference
             android:dialogTitle="@string/settings_pencil"
             android:entries="@array/colorEntries"
             android:entryValues="@array/colorOptionValues"
             android:key="@string/settings_pencil_color_key"
-            android:summary="@string/settings_pencil_color_explain"
+            android:summary="%s"
             android:title="@string/settings_pencil_color" />
         <ListPreference
             android:dialogTitle="@string/settings_pencil_size"
             android:entries="@array/sizeEntries"
             android:entryValues="@array/sizeValues"
             android:key="@string/settings_pencil_size_key"
-            android:summary="@string/settings_pencil_size_explain"
+            android:summary="%s"
             android:title="@string/settings_pencil_size" />
     </PreferenceCategory>
-    
     <PreferenceCategory android:title="@string/settings_text" >
         <ListPreference
             android:dialogTitle="@string/settings_text"
             android:entries="@array/colorEntries"
             android:entryValues="@array/colorOptionValues"
             android:key="@string/settings_text_color_key"
-            android:summary="@string/settings_text_color_explain"
+            android:summary="%s"
             android:title="@string/settings_text_color" />
         <ListPreference
             android:dialogTitle="@string/settings_text_size"
             android:entries="@array/sizeEntries"
             android:entryValues="@array/textSizeValues"
             android:key="@string/settings_text_size_key"
-            android:summary="@string/settings_text_size_explain"
+            android:summary="%s"
             android:title="@string/settings_text_size" />
-	</PreferenceCategory>
-    
+    </PreferenceCategory>
     <PreferenceCategory android:title="@string/settings_eraser" >
         <ListPreference
             android:dialogTitle="@string/settings_eraser_size"
             android:entries="@array/sizeEntries"
             android:entryValues="@array/sizeValues"
             android:key="@string/settings_eraser_size_key"
-            android:summary="@string/settings_eraser_size_explain"
+            android:summary="%s"
             android:title="@string/settings_eraser_size" />
     </PreferenceCategory>
-      
     <PreferenceCategory android:title="@string/settings_images" >
         <CheckBoxPreference
             android:key="@string/settings_image_tag_key"
             android:summary="@string/settings_images_explain"
-            android:title="@string/settings_element_text" />        
+            android:title="@string/settings_element_text" />
+
         <PreferenceScreen
-                android:title="@string/settings_image_title"
-                android:summary="@string/settings_image_sumary">
- 
+            android:summary="@string/settings_image_sumary"
+            android:title="@string/settings_image_title" >
             <intent android:action=".activities.NewImageActivity" />
- 
-        </PreferenceScreen>       
+        </PreferenceScreen>
     </PreferenceCategory>
-    
     <PreferenceCategory android:title="@string/settings_people" >
         <CheckBoxPreference
             android:key="@string/settings_contact_tag_key"
             android:summary="@string/settings_people_explain"
             android:title="@string/settings_element_text" />
+
         <PreferenceScreen
-                android:title="@string/settings_people_title"
-                android:summary="@string/settings_people_summary">
- 
+            android:summary="@string/settings_people_summary"
+            android:title="@string/settings_people_title" >
             <intent android:action=".activities.NewContactActivity" />
- 
-        </PreferenceScreen>       
+        </PreferenceScreen>
     </PreferenceCategory>
+
 </PreferenceScreen>
