--- a/res/layout/layout_contacts.xml
+++ b/res/layout/layout_contacts.xml
@@ -25,14 +25,15 @@
         android:layout_marginTop="5dp" />
 
     <ImageButton
-        android:id="@+id/new_image_gallery"
+        android:id="@+id/add_contact"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_alignBottom="@+id/pager"
         android:layout_alignLeft="@+id/pager"
         android:enabled="false"
         android:scaleType="fitXY"
-        android:src="@drawable/gallery"
+        android:contentDescription="@string/insert_contact_title"
+        android:src="@drawable/sign_add"
         android:visibility="visible" />
 
 </RelativeLayout>
