--- a/res/layout/calculator.xml
+++ b/res/layout/calculator.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="5dp"
     android:background="@drawable/grid_color_selector"
-    android:clickable="true"
+    android:clickable="false"
     android:focusable="true"
     android:orientation="vertical"
     android:padding="5dp" >
