--- a/res/layout/calculator.xml
+++ b/res/layout/calculator.xml
@@ -7,19 +7,36 @@
     android:clickable="false"
     android:focusable="true"
     android:orientation="vertical"
-    android:padding="5dp" >
+    android:overScrollMode="ifContentScrolls"
+    android:padding="5dp"
+    android:textAlignment="viewStart"
+    tools:ignore="UnusedAttribute" >
 
-    <TextView
-        android:id="@+id/calc_text"
+    <HorizontalScrollView
+        android:id="@+id/textScrollView"
         android:layout_width="236dp"
-        android:layout_height="25dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="5dp"
-        android:focusable="false"
-        android:gravity="left"
-        android:textSize="25sp" >
+        android:layout_marginTop="5dp" >
 
-    </TextView>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/calc_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fadingEdge="horizontal"
+                android:gravity="left"
+                android:lines="1"
+                android:scrollbarStyle="insideOverlay"
+                android:scrollbars="horizontal"
+                android:textSize="25sp" >
+            </TextView>
+        </LinearLayout>
+    </HorizontalScrollView>
 
     <GridLayout
         android:layout_width="wrap_content"
@@ -34,201 +51,200 @@
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@integer/calc_1"
-            android:layout_row="0"
             android:layout_column="0"
-            android:textSize="20sp"/>
+            android:layout_row="0"
+            android:text="@integer/calc_1"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/button2"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@integer/calc_2"
-            android:layout_row="0"
             android:layout_column="1"
-            android:textSize="20sp"/>
+            android:layout_row="0"
+            android:text="@integer/calc_2"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/button3"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@integer/calc_3"
-            android:layout_row="0"
             android:layout_column="2"
-            android:textSize="20sp"/>
+            android:layout_row="0"
+            android:text="@integer/calc_3"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/buttonClear"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/calc_clear"
-            android:layout_row="0"
             android:layout_column="3"
-            android:textSize="20sp"/>
-        
+            android:layout_row="0"
+            android:text="@string/calc_clear"
+            android:textSize="20sp" />
+
         <Button
             android:id="@+id/buttonClearAll"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/calc_clear_all"
-            android:layout_row="0"
             android:layout_column="4"
-            android:textSize="20sp"/>
+            android:layout_row="0"
+            android:text="@string/calc_clear_all"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/button4"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@integer/calc_4"
-            android:layout_row="1"
             android:layout_column="0"
-            android:textSize="20sp"/>
+            android:layout_row="1"
+            android:text="@integer/calc_4"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/button5"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@integer/calc_5"
-            android:layout_row="1"
             android:layout_column="1"
-            android:textSize="20sp"/>
+            android:layout_row="1"
+            android:text="@integer/calc_5"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/button6"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@integer/calc_6"
-            android:layout_row="1"
             android:layout_column="2"
-            android:textSize="20sp"/>
+            android:layout_row="1"
+            android:text="@integer/calc_6"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/buttonPlus"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/calc_plus"
-            android:layout_row="1"
             android:layout_column="3"
-            android:textSize="20sp"/>
+            android:layout_row="1"
+            android:text="@string/calc_plus"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/buttonMinus"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/calc_minus"
-            android:layout_row="1"
             android:layout_column="4"
-            android:textSize="20sp"/>
+            android:layout_row="1"
+            android:text="@string/calc_minus"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/button7"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@integer/calc_7"
-            android:layout_row="2"
             android:layout_column="0"
-            android:textSize="20sp"/>
+            android:layout_row="2"
+            android:text="@integer/calc_7"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/button8"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@integer/calc_8"
-            android:layout_row="2"
             android:layout_column="1"
-            android:textSize="20sp"/>
+            android:layout_row="2"
+            android:text="@integer/calc_8"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/button9"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@integer/calc_9"
-            android:layout_row="2"
             android:layout_column="2"
-            android:textSize="20sp"/>
+            android:layout_row="2"
+            android:text="@integer/calc_9"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/buttonMult"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/calc_star"
-            android:layout_row="2"
             android:layout_column="3"
-            android:textSize="20sp"/>
+            android:layout_row="2"
+            android:text="@string/calc_star"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/buttonDiv"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/calc_slash"
-            android:layout_row="2"
             android:layout_column="4"
-            android:textSize="20sp"/>
+            android:layout_row="2"
+            android:text="@string/calc_slash"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/button0"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@integer/calc_0"
-            android:layout_row="3"
             android:layout_column="0"
-            android:textSize="20sp"/>
+            android:layout_row="3"
+            android:text="@integer/calc_0"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/buttonDot"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/calc_dot"
-            android:layout_row="3"
             android:layout_column="1"
-            android:textSize="20sp"/>
+            android:layout_row="3"
+            android:text="@string/calc_dot"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/buttonResult"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/calc_equal"
-            android:layout_row="3"
             android:layout_column="2"
-            android:textSize="20sp"/>
+            android:layout_row="3"
+            android:text="@string/calc_equal"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/buttonOpen"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/calc_open"
-            android:layout_row="3"
             android:layout_column="3"
-            android:textSize="20sp"/>
+            android:layout_row="3"
+            android:text="@string/calc_open"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/buttonClose"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/calc_close"
-            android:layout_row="3"
             android:layout_column="4"
-            android:textSize="20sp"/>
-
+            android:layout_row="3"
+            android:text="@string/calc_close"
+            android:textSize="20sp" />
     </GridLayout>
 
 </LinearLayout>
