[MISC] Visualización de imagen de categorias

--- a/res/layout/scenario_actions.xml
+++ b/res/layout/scenario_actions.xml
@@ -3,7 +3,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:id="@+id/actionsLayout" >
 
     <ImageView
         android:id="@+id/sceneActionBack"
