--- a/res/layout/insert_image_grid_item.xml
+++ b/res/layout/insert_image_grid_item.xml
@@ -3,8 +3,10 @@
     android:id="@+id/insert_image_grid_element"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_gravity="center"
     android:layout_marginTop="5dp"
     android:background="@drawable/grid_color_selector"
+    android:gravity="center"
     android:orientation="vertical"
     android:padding="5dp" >
 
@@ -14,17 +16,20 @@
         android:layout_height="50dp"
         android:focusable="false"
         android:focusableInTouchMode="false"
+        android:contentDescription="@string/image"
         android:scaleType="fitXY" />
 
     <TextView
         android:id="@+id/grid_item_label"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginTop="5dp"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:gravity="center"
         android:textSize="20sp" >
+
     </TextView>
 
 </LinearLayout>
