[MISC] Manner of User, botón abort viewpager

--- a/res/layout/layout_manner_of_use_container.xml
+++ b/res/layout/layout_manner_of_use_container.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="top"
     android:background="@color/black"
+    android:gravity="top"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
@@ -23,5 +23,15 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp" />
+
+    <ImageButton
+        android:id="@+id/useSceneActionBack"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+		android:scaleType="fitCenter"
+		android:adjustViewBounds="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/cancel_back" />
 
 </RelativeLayout>
