[MISC] @ssoria arreglo modal adaptable con dialog. manner of use preparado para adaptarlo a imágenes.

--- a/res/layout/manner_of_use_slide_page.xml
+++ b/res/layout/manner_of_use_slide_page.xml
@@ -4,8 +4,9 @@
     android:layout_height="match_parent" >
 
     <ImageView
+        android:id="@+id/mannerOfUseSlide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/abc_ab_bottom_solid_light_holo"/>
-    
+        android:layout_gravity="center" />
+
 </ScrollView>
