--- a/res/layout-sw480dp/canvas_default.xml
+++ b/res/layout-sw480dp/canvas_default.xml
@@ -125,7 +125,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:contentDescription="@null"
-        android:scaleType="fitXY"
+        android:scaleType="fitCenter"
+		android:adjustViewBounds="true"
         android:src="@drawable/action_settings" />
 
 </RelativeLayout>
