--- a/res/layout/manner_of_use_slide_page.xml
+++ b/res/layout/manner_of_use_slide_page.xml
@@ -1,7 +1,7 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/content"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="wrap_content" >
 
     <ImageView
         android:id="@+id/mannerOfUseSlide"
@@ -9,4 +9,4 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
 
-</ScrollView>
+</LinearLayout>
