--- a/res/layout/canvas_default.xml
+++ b/res/layout/canvas_default.xml
@@ -14,44 +14,28 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/pencilOption"
         android:saveEnabled="true" >
-
     </ar.uba.fi.talker.view.Scenario>
 
     <ImageButton
         android:id="@+id/pencilOption"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/pencil"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:adjustViewBounds="true"
         android:scaleType="fitCenter"
-		android:adjustViewBounds="true"
-		android:contentDescription="@null"  />
+        android:src="@drawable/pencil" />
 
     <ImageButton
         android:id="@+id/eraserOption"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/pencilOption"
-        android:src="@drawable/eraser"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:adjustViewBounds="true"
         android:scaleType="fitCenter"
-		android:adjustViewBounds="true"
-		android:contentDescription="@string/erase_all_accept"/>
-    
+        android:src="@drawable/eraser" />
 
-    <ImageButton
-        android:id="@+id/textOption"
-        android:layout_above="@+id/gestureOverlayView1"
-        android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/insertImageOption"
-        android:src="@drawable/insert_text"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:scaleType="fitCenter"
-		android:adjustViewBounds="true"  
-		android:contentDescription="@string/insert_text_accept"/>
-	
     <ImageButton
         android:id="@+id/calculatorOption"
         android:layout_width="48dp"
@@ -60,8 +44,7 @@
         android:layout_toRightOf="@+id/insertContactOption"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
-        android:src="@drawable/calculator_icon"
-        android:contentDescription="@string/calc_open"/>
+        android:src="@drawable/calculator_icon" />
 
     <ImageButton
         android:id="@+id/calendarOption"
@@ -71,30 +54,39 @@
         android:layout_toRightOf="@+id/calculatorOption"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
-        android:src="@drawable/calendar_icon"
-        android:contentDescription="@null" />
+        android:src="@drawable/calendar_icon" />
+
+    <ImageButton
+        android:id="@+id/button_settings"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        android:src="@drawable/action_settings" />
 
     <ImageButton
         android:id="@+id/insertContactOption"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_above="@+id/gestureOverlayView1"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="124dp"
+        android:layout_toRightOf="@+id/eraserOption"
         android:adjustViewBounds="true"
-        android:contentDescription="@string/insert_image_accept"
         android:scaleType="fitCenter"
         android:src="@drawable/contact_icon" />
 
     <ImageButton
-        android:id="@+id/eraseAllOption"
+        android:id="@+id/insertImageOption"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/insertContactOption"
+        android:layout_marginRight="44dp"
         android:adjustViewBounds="true"
-        android:contentDescription="@string/erase_all_accept"
         android:scaleType="fitCenter"
-        android:src="@drawable/erase_all" />
+        android:src="@drawable/image_icon" />
 
     <ImageButton
         android:id="@+id/saveAll"
@@ -103,31 +95,36 @@
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/eraseAllOption"
         android:adjustViewBounds="true"
-        android:contentDescription="@string/new_conversation"
         android:scaleType="fitCenter"
         android:src="@drawable/save_all" />
 
     <ImageButton
-        android:id="@+id/insertImageOption"
+        android:id="@+id/exit"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_above="@+id/gestureOverlayView1"
-        android:layout_toLeftOf="@+id/insertContactOption"
-        android:adjustViewBounds="true"
-        android:contentDescription="@string/insert_image_accept"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
         android:scaleType="fitCenter"
-        android:src="@drawable/image_icon" />
+        android:src="@drawable/exit" />
 
     <ImageButton
-        android:id="@+id/button_settings"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:contentDescription="@null"
+        android:id="@+id/textOption"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/insertImageOption"
+        android:adjustViewBounds="true"
         android:scaleType="fitCenter"
-		android:adjustViewBounds="true"
-        android:src="@drawable/action_settings" />
+        android:src="@drawable/insert_text" />
 
+    <ImageButton
+        android:id="@+id/eraseAllOption"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/exit"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        android:src="@drawable/erase_all" />
 
 </RelativeLayout>
