--- a/res/layout/layout_images.xml
+++ b/res/layout/layout_images.xml
@@ -32,7 +32,8 @@
         android:layout_alignLeft="@+id/pager"
         android:enabled="false"
         android:scaleType="fitXY"
-        android:src="@drawable/gallery"
+        android:contentDescription="@string/insert_contact_title"
+        android:src="@drawable/sign_add"
         android:visibility="visible" />
 
 </RelativeLayout>
