--- a/res/layout/scenario_actions.xml
+++ b/res/layout/scenario_actions.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/actionsLayout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:orientation="horizontal"
-    android:id="@+id/actionsLayout" >
+    android:paddingBottom="15dp"
+    android:paddingTop="15dp" >
 
     <ImageView
         android:id="@+id/sceneActionBack"
@@ -15,6 +17,8 @@
         android:layout_marginRight="10dp"
         android:clickable="true"
         android:contentDescription="@string/settings_back"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
         android:scaleType="fitXY"
         android:src="@drawable/cancel_back" />
 
@@ -27,6 +31,8 @@
         android:layout_marginRight="10dp"
         android:clickable="true"
         android:contentDescription="@string/delete_scenario_title"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
         android:scaleType="fitXY"
         android:src="@drawable/erase_all" />
 
@@ -37,6 +43,8 @@
         android:layout_gravity="center"
         android:clickable="true"
         android:contentDescription="@string/change_conversation_title"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
         android:scaleType="fitXY"
         android:src="@drawable/editname" />
 
