[MISC] abm im/contact fixes

--- a/res/layout/insert_image_gridview.xml
+++ b/res/layout/insert_image_gridview.xml
@@ -33,11 +33,10 @@
 
     <ImageButton
         android:id="@+id/add_image"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@color/lightblueback"
-        android:contentDescription="@string/calc_open"
         android:scaleType="fitCenter"
 		android:adjustViewBounds="true"  
         android:src="@drawable/sign_add"
