--- a/res/layout/layout_categories.xml
+++ b/res/layout/layout_categories.xml
@@ -8,7 +8,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
@@ -26,14 +26,13 @@
 
     <ImageButton
         android:id="@+id/add_image"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/pager"
         android:layout_alignLeft="@+id/pager"
-        android:enabled="false"
+        android:layout_alignParentStart="false"
+        android:adjustViewBounds="true"
         android:scaleType="fitCenter"
-		android:adjustViewBounds="true"  
-        android:src="@drawable/sign_add"
-        android:visibility="visible" />
+        android:src="@drawable/sign_add" />
 
 </RelativeLayout>
