--- a/res/layout/insert_image_gridview.xml
+++ b/res/layout/insert_image_gridview.xml
@@ -33,7 +33,7 @@
 
     <ImageButton
         android:id="@+id/add_image"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@color/lightblueback"
